add services section with 4 sub-sections

--- a/public/index.html
+++ b/public/index.html
@@ -32,45 +32,71 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in hide" id="first">
+				<!-- Two.1 -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>Living Room</h2>
+							<p>We make interior design for living rooms that is based on what is best for dimenions of the room and how you
+								plan to use it. Living rooms should have very aesthetic arrangement of seating arrangements and
+								entertainment systems so that it offers a great balance of enabling great time of you and your guests.</p>
+							<ul class="actions stacked hide">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/service_01_living_room.jpg" alt="" />
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in hide">
+				<!-- Two.2 -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>Kitchen</h2>
+							<p>We make modular kitchens so that everything you need while cooking is just a few thoughts away and reachable.
+								We offer a very comprehensive list of colors and texture of material used so that your kitchen goes with
+								your personality and fits well with rest of the apartments.</p>
+							<ul class="actions stacked hide">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/service_02_kitchen.jpg" alt="" />
 						</div>
 					</section>
 
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in hide">
+				<!-- Two.3 -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>Bed Room</h2>
+							<p>You need a good night sleep after that long day of working hard. Our custom bed room designs ensure you just
+								get that. Sometimes you need it exactly how you want and we make it happen.
+							</p>
+							<ul class="actions stacked hide">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/service_03_bed_room.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Two.4 -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Commercial spaces</h2>
+							<p>Commercial spaces are tricky to get right. It needs to be very functional to enable collaboaration between 
+								several people or departments of your business and at the same time it needs to look very aesthetic and
+								approachable to strangers who would become your customers based on what their hour of experience is when
+								they visit your business venue. We bring a very diverse experience in making interior design for commercial
+								spaces and if you talk to us about what you are looking for we would love to share our ideas to get started 
+								on your project.
+							</p>
+							<ul class="actions stacked hide">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/service_04_commercial_spaces.jpg" alt="" />
 						</div>
 					</section>
 
@@ -325,7 +351,12 @@
 								</ul>
 							</form>
 							<h3>Phone</h3>
-                            <p>+91 86 2000 2000</p>
+							<p>+91 86 2000 2000</p>
+							<h3>Address</h3>
+                            <p>Design House, 12,13 Chandresh Kedar,<br/>
+								Lodha Haven, Palava,<br/>
+								Nilje Dombivali East, Mumbai - 421204</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1884.4313080448806!2d73.0771471!3d19.1574901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xada996bf5cfce280!2schandresh%20kedar%20society!5e0!3m2!1sen!2sin!4v1599910700628!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 						</div>
 					</section>
 
